# Prompt-Bottle

./: README.md  example.jinja  example.py  pyproject.toml  testing.html
examples/: bottle.py  preset_simple_bottle.py  roleplay.py
src/prompt_bottle/: utils.py
src/prompt_bottle/ng/: pipeline.py
