[project]
name = "prompt_bottle"
version = "0.2.0"
description = "Prompt template engine, built upon Jinja"
authors = [
    {name = "Yanli",email = "mail@yanli.one"},
]
dependencies = [
    "qwq-tag>=0.1.2",
    "minijinja>=2.11.0",
    "pydantic-ai-slim>=0.7.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.urls]
Repository = "https://github.com/BeautyyuYanli/Prompt-Bottle"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pyright]
venvPath = ".venv"

[tool.ruff]
target-version = "py310"
exclude = [".venv"]
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = [
    "RUF001",  # '，' vs. ','
    "RUF003",  # Ambiguous unicode character comment
    "E501",    # Line too long
    "E402",    # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "SIM105",  # Use `contextlib.suppress(Exception)` instead of `try`-`except`-`pass`
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
]

[tool.ruff.lint.isort]
known-first-party = ["prompt_bottle"]


[tool.pdm.scripts]
fix = { shell = "ruff check --fix && ruff format" }
check = { shell = 'ruff check && ruff format --check' }
test = { shell = 'pytest' }
[dependency-groups]
dev = [
    "rich>=13.9.4",
    "ruff>=0.8.1",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "pydantic-ai-slim[openai]>=0.7.2",
]
